force-app/main/default/objects/ProgramEligibility__c/ProgramEligibility__c.object-meta.xml
<CustomObject>
    <label>Program Eligibility</label>
    <nameField>
        <label>Program Eligibility Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Eligibilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>