force-app/main/default/objects/ProgramEligibility__c/fields/CriteriaType__c.field-meta.xml
<CustomField>
    <fullName>CriteriaType__c</fullName>
    <label>CriteriaType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A. State Government</fullName>
            </value>
            <value>
                <fullName>B. County Government</fullName>
            </value>
            <value>
                <fullName>C. City or Township Government</fullName>
            </value>
            <value>
                <fullName>D. Special District Government</fullName>
            </value>
            <value>
                <fullName>E. Regional Organization</fullName>
            </value>
            <value>
                <fullName>F. U.S. Territory or Possession</fullName>
            </value>
            <value>
                <fullName>G. Independent School District</fullName>
            </value>
            <value>
                <fullName>H. Public/State Controlled Institution of Higher Education</fullName>
            </value>
            <value>
                <fullName>I. Indian/Native American Tribal Government (Federally Recognized)</fullName>
            </value>
            <value>
                <fullName>J. Indian/Native American Tribal Government (Other than Federally Recognized)</fullName>
            </value>
            <value>
                <fullName>K. Indian/Native American Tribally Designated Organization</fullName>
            </value>
            <value>
                <fullName>L. Public/Indian Housing</fullName>
            </value>
            <value>
                <fullName>M. Nonprofit</fullName>
            </value>
            <value>
                <fullName>N. Private Institution of Higher Education</fullName>
            </value>
            <value>
                <fullName>O. Individual</fullName>
            </value>
            <value>
                <fullName>P. For-Profit Organization (Other than Small Business)</fullName>
            </value>
            <value>
                <fullName>Q. Small Business</fullName>
            </value>
            <value>
                <fullName>R. Hispanic-serving Institution</fullName>
            </value>
            <value>
                <fullName>S. Historically Black Colleges and Universities (HBCUs)</fullName>
            </value>
            <value>
                <fullName>T. Tribally Controlled Colleges and Universities (TCCUs)</fullName>
            </value>
            <value>
                <fullName>U. Alaska Native and and Native Hawaiian Serving Institutions</fullName>
            </value>
            <value>
                <fullName>V. Non-US Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>