force-app/main/default/objects/ProgramEligibility__c/fields/CriteriaValue__c.field-meta.xml
<CustomField>
    <fullName>CriteriaValue__c</fullName>
    <label>CriteriaValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>