force-app/main/default/objects/ProgramEligibility__c/fields/Funding_Program__c.field-meta.xml
<CustomField>
    <fullName>Funding_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Funding Program</label>
    <referenceTo>outfunds__Funding_Program__c</referenceTo>
    <relationshipLabel>Program Eligibilities</relationshipLabel>
    <relationshipName>Program_Eligibilities</relationshipName>
    <type>Lookup</type>
</CustomField>